refacto vue calendrier

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -2,17 +2,15 @@
     display: block;
     float: left;
     height: 30px;
-    width: 4px;
     background-color: #e2e2e2;
-    border-left: 1px solid #f2f2f2;
     cursor: pointer;
 }
 #calendrierVue .ligne .jour:hover {
     background-color: #000 !important;
 }
 
-#calendrierVue .ligne .finMois {
-    background-color: #fff !important;
+#calendrierVue .ligne .active {
+    background-color: #f00 !important;
 }
 
 #calendrierVue .ligne .jourcourant {
