--- a/public/css/main.css
+++ b/public/css/main.css
@@ -91,6 +91,10 @@
     padding-bottom: .5rem;
 }
 
+p.tags-header > span:not(:last-child) {
+    margin-right: 1rem;
+}
+
 .ql-container {
     height: unset;
 }
