Tente de rendre plus visible l'organisme sélectionné

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -110,3 +110,13 @@ p.tags-header > span:not(:last-child) {
 .ql-container {
     height: unset;
 }
+
+#sidebar-list-organismes label {
+opacity: 0.6;
+}
+.btn.btn-outline-primary.btn-sm {
+}
+
+.btn-check:checked + .btn {
+opacity: 1 !important;
+}
