--- a/public/css/main.css
+++ b/public/css/main.css
@@ -121,3 +121,11 @@ opacity: 0.6;
 .btn-check:checked + .btn {
 opacity: 1 !important;
 }
+
+/* Admin */
+
+.form-signin {
+  max-width: 40vh;
+  min-height: 60vh;
+  padding: 1rem;
+}
