--- a/public/css/main.css
+++ b/public/css/main.css
@@ -122,6 +122,94 @@ opacity: 0.6;
 opacity: 1 !important;
 }
 
+.timeline {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.timeline::after {
+    /* Trait vertical */
+    background-color: var(--bs-primary-bg-subtle);
+    bottom: 0;
+    content: "";
+    left: 0;
+    margin-left: -1px;
+    position: absolute;
+    top: 0;
+    width: 2px;
+}
+
+.timeline > .timeline-item {
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.timeline > .timeline-item::after {
+    /* Cercle */
+    background: var(--bs-light);
+    border: 2px solid var(--bs-primary);
+    border-radius: 50%;
+    content: "";
+    height: 16px;
+    left: calc(8px * -1);
+    position: absolute;
+    top: calc(50% - 8px);
+    width: 16px;
+    z-index: 1;
+}
+
+.timeline > .timeline-item .timeline-body {
+    margin: 0;
+    padding: 0;
+    position: relative;
+}
+
+.timeline > .timeline-item .timeline-meta {
+    padding: 0 0 1rem 2rem;
+}
+
+.timeline > .timeline-item:first-child .timeline-meta {
+    padding: 2rem 0 1rem 2rem;
+}
+
+.timeline > .timeline-item .timeline-content {
+    padding: 0 0 2rem 2rem;
+}
+
+@media (min-width: 768px) {
+    .timeline:after {
+        left: 33%;
+    }
+
+    .timeline > .timeline-item {
+        left: 33%;
+        width: 67%;
+    }
+
+    .timeline > .timeline-item .timeline-meta {
+        display: flex;
+        justify-content: flex-end;
+        left: -100%;
+        margin: 0;
+        padding: 0 2rem 0 0;
+        position: absolute;
+        top: calc(50% - 10px);
+        width: 100%;
+        z-index: 1;
+    }
+
+    .timeline > .timeline-item:first-child .timeline-meta {
+        padding: 0 2rem 0 0;
+    }
+
+    .timeline > .timeline-item .timeline-content {
+        padding: 2rem;
+    }
+}
+
 /* Admin */
 
 .form-signin {
