--- a/public/css/main.css
+++ b/public/css/main.css
@@ -156,7 +156,7 @@ opacity: 1 !important;
     height: 16px;
     left: calc(8px * -1);
     position: absolute;
-    top: calc(50% - 8px);
+    top: calc(2rem + 3px);
     width: 16px;
     z-index: 1;
 }
@@ -191,12 +191,13 @@ opacity: 1 !important;
 
     .timeline > .timeline-item .timeline-meta {
         display: flex;
-        justify-content: flex-end;
+        align-items: flex-end;
+        flex-direction: column;
         left: -100%;
         margin: 0;
         padding: 0 2rem 0 0;
         position: absolute;
-        top: calc(50% - 10px);
+        top: 2rem;
         width: 100%;
         z-index: 1;
     }
