--- a/public/css/main.css
+++ b/public/css/main.css
@@ -118,7 +118,7 @@ header h1 {
 }
 
 .organisme-card {
-    background-color: var(--backgroud-grey);
+    background-color: #f2f2f2;
     margin-bottom: 1rem;
 }
 
