--- a/public/css/main.css
+++ b/public/css/main.css
@@ -72,6 +72,7 @@ header h1 {
     left: 0;
     border-left: 1px solid #dee2e6;
     border-top: 1px solid #dee2e6;
+    flex-shrink: 0;
 }
 
 .cal-titre-txt {
