--- a/public/css/main.css
+++ b/public/css/main.css
@@ -99,6 +99,7 @@ header h1 {
 .cal-header .cal-titre-header {
     background: #fff;
     border: none;
+    padding-left: 0;
 }
 
 .cal-header .cal-month {
